# fixmydata_finalproject

./: README.md  demo.py  pyproject.toml  setup.py
fixmydata_project/fixmydata/: data_cleaner.py  data_validator.py  demo.py  outlier_detector.py
fixmydata_reports/: Week 1_Narrative_Report.md
