[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixmydata"
version = "0.1.0"
description = "A Python library for data cleaning"
readme = "README.md"
authors = [
  { name="Johann Lloyd Megalbio, Albrien Dealino, Shawn B. Sillote, Rafael John Calingin" email="megalbio.johann@gmail.com, " }
]
license = { text="MIT" }
requires-python = ">=3.8"
dependencies = []
keywords = ["data-cleaning", "data-science", "cleaning"]

[project.urls]
Repository = "https://github.com/DirtCrew53/fixmydata_finalproject"
Homepage = "https://github.com/DirtCrew53/fixmydata_finalproject"
